src/objects/Apttus_Billing__GatewayTransaction__c.object
<CustomObject>
    <description>Used to store the data from a specific payment/refund transaction (ex: authorization request or capture request and result)</description>
    <fields>
        <fullName>Apttus_Billing__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account corresponding to the gateway Transaction.</description>
        <inlineHelpText>The account corresponding to the gateway Transaction.</inlineHelpText>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gateway Transactions</relationshipLabel>
        <relationshipName>GatewayTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AuthAVSCode__c</fullName>
        <description>The auth avs code.</description>
        <inlineHelpText>The auth avs code.</inlineHelpText>
        <label>Auth AVS Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AuthAmount__c</fullName>
        <description>Authorized amount.</description>
        <inlineHelpText>Authorized amount.</inlineHelpText>
        <label>Auth Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AuthResponse__c</fullName>
        <description>The Auth response.</description>
        <inlineHelpText>The Auth response.</inlineHelpText>
        <label>Auth Response</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CardExpirationMonth__c</fullName>
        <description>Expiration month of the card used.</description>
        <inlineHelpText>Expiration month of the card used.</inlineHelpText>
        <label>Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CardExpirationYear__c</fullName>
        <description>Expiration year of the card used.</description>
        <inlineHelpText>Expiration year of the card used.</inlineHelpText>
        <label>Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CardNumber__c</fullName>
        <description>Masked card number used.</description>
        <inlineHelpText>Masked card number used.</inlineHelpText>
        <label>Card Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CardType__c</fullName>
        <description>Card type used in transaction.</description>
        <inlineHelpText>Card type used in transaction.</inlineHelpText>
        <label>Card Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ECheckAccountNumber__c</fullName>
        <description>Masked eCheck account number.</description>
        <inlineHelpText>Masked eCheck account number.</inlineHelpText>
        <label>ECheck Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ECheckAccountType__c</fullName>
        <description>eCheck account type.</description>
        <inlineHelpText>eCheck account type.</inlineHelpText>
        <label>ECheck Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ECheckRoutingNumber__c</fullName>
        <description>Masked eCheck routing number.</description>
        <inlineHelpText>Masked eCheck routing number.</inlineHelpText>
        <label>ECheck Routing Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__GatewayDecision__c</fullName>
        <description>The response decision from the gateway.</description>
        <inlineHelpText>The response decision from the gateway.</inlineHelpText>
        <label>Gateway Decision</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__GatewayMessage__c</fullName>
        <description>The response message from the gateway.</description>
        <inlineHelpText>The response message from the gateway.</inlineHelpText>
        <label>Gateway Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__OrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated Order Id.</description>
        <inlineHelpText>The associated Order Id.</inlineHelpText>
        <label>Order Id</label>
        <referenceTo>Apttus_Config2__Order__c</referenceTo>
        <relationshipLabel>Gateway Transactions</relationshipLabel>
        <relationshipName>GatewayTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated payment id.</description>
        <inlineHelpText>The associated payment id.</inlineHelpText>
        <label>Payment Id</label>
        <referenceTo>Apttus_Billing__Payment__c</referenceTo>
        <relationshipLabel>Gateway Transactions</relationshipLabel>
        <relationshipName>GatewayTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentMethodId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The payment method used to process this request.</description>
        <inlineHelpText>The payment method used to process this request.</inlineHelpText>
        <label>Payment Method Id</label>
        <referenceTo>Apttus_Billing__PaymentMethod__c</referenceTo>
        <relationshipLabel>Gateway Transactions</relationshipLabel>
        <relationshipName>GatewayTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__PaymentMethodType__c</fullName>
        <description>Payment method type of the request.</description>
        <inlineHelpText>Payment method type of the request.</inlineHelpText>
        <label>Payment Method Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ProfileId__c</fullName>
        <description>Assigned by gateway. Used to identify customer profile.</description>
        <inlineHelpText>Assigned by gateway. Used to identify customer profile.</inlineHelpText>
        <label>Profile Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ReasonCode__c</fullName>
        <description>The reason code.</description>
        <inlineHelpText>The reason code.</inlineHelpText>
        <label>Reason Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ReferenceId__c</fullName>
        <description>Reference ID returned from Gateway.</description>
        <inlineHelpText>Reference ID returned from Gateway.</inlineHelpText>
        <label>Reference Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__RefundId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated refund id.</description>
        <inlineHelpText>The associated refund id.</inlineHelpText>
        <label>Refund Id</label>
        <referenceTo>Apttus_Billing__Refund__c</referenceTo>
        <relationshipLabel>Gateway Transactions</relationshipLabel>
        <relationshipName>GatewayTransactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__RelatedAuthRequestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the corresponding Auth Request.</description>
        <inlineHelpText>Link to the corresponding Auth Request.</inlineHelpText>
        <label>Related Auth Request Id</label>
        <referenceTo>Apttus_Billing__GatewayTransaction__c</referenceTo>
        <relationshipName>RelatedAuthRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__RequestAmount__c</fullName>
        <description>The request amount.</description>
        <inlineHelpText>The request amount.</inlineHelpText>
        <label>Request Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__RequestCurrency__c</fullName>
        <description>3 letter ISO currency code of the request.</description>
        <inlineHelpText>3 letter ISO currency code of the request.</inlineHelpText>
        <label>Request Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__RequestDate__c</fullName>
        <description>The Date/Time when the request was sent to the gateway.</description>
        <inlineHelpText>The Date/Time when the request was sent to the gateway.</inlineHelpText>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__RequestTaxAmount__c</fullName>
        <description>The tax for the request amount</description>
        <inlineHelpText>The tax for the request amount</inlineHelpText>
        <label>Request Tax Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__RequestTokenId__c</fullName>
        <description>Request token id given by the Gateway.</description>
        <inlineHelpText>Request token id given by the Gateway.</inlineHelpText>
        <label>Request Token Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ResponseCode__c</fullName>
        <description>The response code from the gateway.</description>
        <inlineHelpText>The response code from the gateway.</inlineHelpText>
        <label>Response Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ResponseDate__c</fullName>
        <description>The Date/Time when a valid response was received from the gateway.</description>
        <inlineHelpText>The Date/Time when a valid response was received from the gateway.</inlineHelpText>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__ResponseString__c</fullName>
        <description>The response string from the gateway.</description>
        <inlineHelpText>The response string from the gateway.</inlineHelpText>
        <label>Response String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__Status__c</fullName>
        <description>Status of the transaction.</description>
        <inlineHelpText>Status of the transaction.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TransactionId__c</fullName>
        <description>Unique transaction ID provided by the gateway</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique transaction ID provided by the gateway</inlineHelpText>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TransactionType__c</fullName>
        <description>The type of transaction.</description>
        <inlineHelpText>The type of transaction.</inlineHelpText>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Capture</fullName>
                </value>
                <value>
                    <fullName>Sale</fullName>
                </value>
                <value>
                    <fullName>Payment Method Create</fullName>
                </value>
                <value>
                    <fullName>Payment Method Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Billing__UpdatedTokenId__c</fullName>
        <description>Updated Token Id by the gateway.</description>
        <inlineHelpText>Updated Token Id by the gateway.</inlineHelpText>
        <label>Updated Token Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Gateway Transaction</label>
    <nameField>
        <displayFormat>GT-{0000000000}</displayFormat>
        <label>Gateway Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gateway Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>